# GUI

./: README.md
GUI/include/: GUI.h
GUI/include/private/: GUI_Backbone.h  GUI_Datastructures.h  GUI_GLFW_Simplified.h
GUI/shaders/: uber_geometry_shader.glsl
GUI/src/: GUI.c  debug.c  main.c
GUI/src_itn/: GUI_Backbone_it0.c  main1.c
GUI1/: GUI_thinking.c
GUI1/include/private/: GUI_Collective_Functions.h
GUI1/shaders/: item_vertex_shader.glsl  uber_fragment_shader.glsl
GUI1/src/: gui.c
GUI1/src_itn/: GUI_UserFunctions.c  main3.c
iteration_0/: README.md
iteration_0/GUI/: BTC_Macroview
iteration_0/GUI/shaders/: item_fragment_shader.glsl  uber_vertex_shader.glsl  uber_vertex_shader_it0.glsl
iteration_0/GUI/src/: array.c
iteration_0/GUI/src_itn/: GUI_Backbone.c  main2.c
iteration_1/: README.md  explaining.c  makefile  overview.txt
iteration_1/include/: array.h  gui.h
iteration_1/include/private/: GUI_Datastructures_it0.h
iteration_1/shaders/: uber_fragment_shader_it0.glsl  uber_geometry_shader_it0.glsl
iteration_1/src/: gui.c  main.c
iteration_2/: README.md
iteration_2/include/: array.h  gui.h
iteration_2/shaders/: uber_fragment_shader.glsl  uber_vertex_shader.glsl
iteration_2/src/: .gui.c.kate-swp  gui.c  main.c
iteration_3/include/: array.h  gui.h
iteration_3/shaders/: uber_vertex_shader.glsl
iteration_3/src/: gui.c  main.c
iteration_4/: CMakeLists.txt
iteration_4/include/: ui.hpp
iteration_4/src/: main.cpp  ui.cpp
iteration_5/: CMakeLists.txt  README.md  main.cpp
iteration_5/include/: app.hpp
iteration_5/shaders/: shader.wgsl
iteration_5/src/: app.cpp
